tests/src/frontend/visibility/invalid/global_private_const.sk
private const i: Int = 100000;
